2006-09-17 Jens Tkotz <jens@peino.de> 1.6-svn-b12

 * Change: Links in Gallery and Album titles are now handled fine.
    - New function clearGalleryTitle($addon)

 * Change: Nicify of tools/* files. Outsorced functions into tool/lib/

 * Fix: Header and footer calls in tools/* files.

 * Fix: Little html and missing text in "despam comments".

 * Change: Outsourced functionality from albums.php and templates.
	   New funciotns for reuse created in lib/album.php
    - prefetchRootAlbumNav()
    - rootRSSLink()
    - prefetchAlbumNav()
    - albumRSSLink()
    - customCSS()

 * Change: Moved returnToPathArray() from lib/content.php into lib/album.php

 * Change: Outsorced functions from stats.php into lib/stats.php 	 

2006-09-11 Jens Tkotz <jens@peino.de> 1.6-svn-b11

 * Fix: If magic_quotes are On, stripslashes were called after
        sanitizing the input.
        This results in the fact that links in input with quotes were
        not regocnized.

 * Fix: Use stripslashes_deep() on Input.

2006-09-08 Jens Tkotz <jens@peino.de> 1.6-svn-b10

 * Fix: Added additional --keyword in xgettext calls to support gettext 0.15

2006-09-08 Jens Tkotz <jens@peino.de> 1.6-svn-b9

 * Fix: removed the $break param from the calls of makeSectionTabs() in setup ;)

2006-09-06 Jens Tkotz <jens@peino.de> 1.6-svn-b8

 * Update: YUI -> 0.11.3

2006-09-06 Jens Tkotz <jens@peino.de> 1.6-svn-b7

 * CHANGE: Changed table name for Gallery in joomla! and Mambo to 'gallery16'

2006-09-06 Jens Tkotz <jens@peino.de> 1.6-svn-b6

 * Change: Nicify of login.php, added Javascript for en/disableing action buttons

 * New: Added CSS for disabled buttons in css/screen.css.default

2006-09-06 Jens Tkotz <jens@peino.de> 1.6-svn-b5

 * Change: Moved printPopupStart from lib/content.php to lib/popup.php

 * Change: makeFormIntro now uses "post" not "POST"

 * Change: removed unneeded param $break from makeSectionTabs()

 * Change: $attrList['name'] = $attrList['id'] = $name; in
           gSubmit()
