@@ -1,3 +1,9 @@
+2006-09-17 Jens Tkotz <jens@peino.de> 1.6-svn-b13
+
+ * Update: wz_jsgraphics.js    v. 2.36
+
+ * Little code nicify js/multifile.js.php
+
 2006-09-17 Jens Tkotz <jens@peino.de> 1.6-svn-b12
 
  * Change: Links in Gallery and Album titles are now handled fine.
